<resources>
    <string name="app_name">Httper</string>
    <string name="history_name">History</string>

    <string name="bottom_tab_request">Request</string>
    <string name="bottom_tab_project">Project</string>
    <string name="bottom_tab_settings">Settings</string>

    <string name="main_view_method">Request Method</string>
    <string name="main_view_url_example">www.example.com</string>
    <string name="main_view_send_request">Send Request</string>
    <string name="main_view_save_to_project">Save to Project</string>
    <string name="main_view_headers">Headers</string>
    <string name="main_view_params">Parameters</string>
    <string name="main_view_body">Body</string>
    <string name="main_view_body_raw">Raw Request Body (TEXT)</string>
    <string name="main_view_body_raw_dialog_hint">Input request body here</string>
    <string name="main_view_key">Key</string>
    <string name="main_view_value">Value</string>
    <string name="main_view_add">Add</string>
    <string name="main_view_remove">Remove</string>
    <string name="main_view_history">History</string>
    <string name="main_view_clear">Clear all</string>
    <string name="main_view_about">About this app</string>
    <string name="invalid_header_error">Send failed. Invalid character \'%1$c\' (%2$#04x) at %3$d in HTTP header field:\n\n%4$s</string>

    <string name="result_view_pretty">Pretty</string>
    <string name="result_view_raw">Raw</string>
    <string name="result_view_preview">Preview</string>
    <string name="result_view_response_info">Response Information</string>
    <string name="result_view_refreshing">Wait a moment…</string>

    <string name="history_view_search">Search</string>
    <string name="history_view_search_url">Search URL…</string>
    <string name="history_view_clear">Clear all</string>
    <string name="history_view_empty">No history</string>

    <string name="response_url">Request URL</string>
    <string name="response_status">Status</string>
    <string name="response_headers">Response Headers</string>
    <string name="context_menu_copy">Copy to clipboard</string>
    <string name="context_menu_save_pretty">Save text as…</string>
    <string name="context_menu_save">Save raw bytes as…</string>
    <string name="toast_copy">Copied to clipboard</string>
    <string name="copy_error">Failed to copy. The text is too long</string>
    <string name="dialog_save_file_title">Save as…</string>
    <string name="save_file_name">Enter the file name below. A file name cannot contain any of the following characters \\/:*?\"&#060;&#062;|\n\nThe file will be saved to path:\n%s</string>
    <string name="save_file_error">Permission denied</string>
    <string name="save_file_success">Saved to %s</string>
    <string name="save_file_success2">Saved</string>

    <string name="error">Cannot access to the URL, check your connection and service provider!\n\nError Message:\n%s</string>
    <string name="clear_history_warn">Do you really want to clear the entire history?</string>
    <string name="clear_request_warn">Are you sure to clear and reset request?</string>
    <string name="dialog_error">Error</string>
    <string name="dialog_warn">Warning</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="about_view_description">App for developers to test REST API.\nTest anywhere and anytime without desktops.</string>
    <string name="about_view_version">v%s</string>
    <string name="about_view_copy_right">Copyright © 2017</string>
    <string name="about_view_us">MuShare Group</string>
    <string name="about_view_licenses">Licenses</string>
    <string name="about_view_link">Visit our Homepage</string>
    <string name="about_view_github">Fork on Github</string>
    <string name="about_view_store">Rate on Play Store</string>

    <string-array name="methods_array">
        <item>GET</item>
        <item>POST</item>
        <item>HEAD</item>
        <item>PUT</item>
        <item>DELETE</item>
        <item>PATCH</item>
    </string-array>
    <string-array name="http_array">
        <item>http://</item>
        <item>https://</item>
    </string-array>
    <string-array name="headers_array">
        <item>Accept</item>
        <item>Accept-Charset</item>
        <item>Accept-Datetime</item>
        <item>Accept-Encoding</item>
        <item>Accept-Language</item>
        <item>Access-Control-Request-Headers</item>
        <item>Access-Control-Request-Method</item>
        <item>Authorization</item>
        <item>Cache-Control</item>
        <item>Connection</item>
        <item>Content-Length</item>
        <item>Content-MD5</item>
        <item>Content-Transfer-Encoding</item>
        <item>Content-Type</item>
        <item>Cookie</item>
        <item>Cookie 2</item>
        <item>DNT</item>
        <item>Date</item>
        <item>Expect</item>
        <item>Forwarded</item>
        <item>From</item>
        <item>Host</item>
        <item>If-Match</item>
        <item>If-Modified-Since</item>
        <item>If-None-Match</item>
        <item>If-Range</item>
        <item>If-Unmodified-Since</item>
        <item>Keep-Alive</item>
        <item>Max-Forwards</item>
        <item>Origin</item>
        <item>Pragma</item>
        <item>Proxy-Authorization</item>
        <item>Range</item>
        <item>Referer</item>
        <item>TE</item>
        <item>Trailer</item>
        <item>Transfer-Encoding</item>
        <item>Upgrade</item>
        <item>User-Agent</item>
        <item>Via</item>
        <item>Warning</item>
        <item>X-Do-Not-Track</item>
        <item>X-Requested-With</item>
    </string-array>
    <string-array name="licenses">
        <item>OkHttp</item>
        <item>An HTTP &amp; HTTP/2 client for Android and Java applications. (APACHE 2.0)</item>
        <item>https://github.com/square/okhttp</item>

        <item>FastAdapter</item>
        <item>The bullet proof, fast and easy to use adapter library. (APACHE 2.0)</item>
        <item>https://github.com/mikepenz/FastAdapter</item>

        <item>greenDAO</item>
        <item>greenDAO is a light &amp; fast ORM solution for Android that maps objects to SQLite databases. (APACHE 2.0)</item>
        <item>https://github.com/greenrobot/greenDAO</item>

        <item>AutoFitTextView</item>
        <item>A TextView that automatically resizes text to fit perfectly within its bounds. (APACHE 2.0)</item>
        <item>https://github.com/grantland/android-autofittextview</item>

        <item>LeakCanary</item>
        <item>A memory leak detection library for Android and Java. (APACHE 2.0)</item>
        <item>https://github.com/square/leakcanary</item>

        <item>Material Design Icons</item>
        <item>materialdesignicons.com (SIL Open Font License 1.1)</item>
        <item>https://github.com/Templarian/MaterialDesign</item>

        <item>Material Design Iconic Font</item>
        <item>zavoloklom.github.io/material-design-iconic-font/ (SIL Open Font License 1.1)</item>
        <item>https://github.com/zavoloklom/material-design-iconic-font</item>

        <item>Special Icon Family</item>
        <item>Designed by Freepik from Flaticon (Free for commercial use WITH ATTRIBUTION license)</item>
        <item>http://www.flaticon.com/family/special/lineal</item>
    </string-array>
</resources>
