<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical"
              android:orientation="horizontal">

    <AutoCompleteTextView
        android:id="@+id/textViewKey"
        style="@style/AppTheme.TextAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:completionThreshold="1"
        android:dropDownWidth="304sp"
        android:hint="@string/main_view_key"
        android:imeOptions="actionNext|flagNoExtractUi"
        android:inputType="textNoSuggestions"/>

    <EditText
        android:id="@+id/textViewValue"
        style="@style/AppTheme.TextAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:hint="@string/main_view_value"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:inputType="textNoSuggestions"/>

    <ImageButton
        android:id="@+id/imageButtonRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_selectable_item"
        android:contentDescription="@string/main_view_remove"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_action_remove_circle_outline"/>
</LinearLayout>