<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--app:title="@string/app_name">-->
        <!--</android.support.v7.widget.Toolbar>-->
        <org.mushare.httper.MyTouchableLinearLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:tabBackground="?selectableItemBackgroundBorderless"
                app:tabMode="scrollable">

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_view_pretty"/>

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_view_raw"/>

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_view_preview"/>
            </android.support.design.widget.TabLayout>

            <ImageButton
                android:id="@+id/buttonShowInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/result_view_response_info"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:srcCompat="@drawable/ic_action_info_outline"/>

        </org.mushare.httper.MyTouchableLinearLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/refreshingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/result_view_refreshing"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>